# site-monitor

./: .gitignore  .vercelignore  DEPLOYMENT_CHECKLIST.md  DEPLOY_VERCEL.md  Makefile  RAILWAY_SETUP_GUIDE.md  SETUP.md  VERCEL_SETUP_STEPS.md  package.json  readme.md  vercel.json
.github/workflows/: ci.yml  ci.yml.disabled
apps/api/: Procfile  alembic.ini  pyproject.toml  railway.json  requirements.txt  seed.py  seed_db.py  seed_raw.py  setup.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
apps/api/app/routers/: api_keys.py  auth.py  dashboard.py  invites.py  seed_endpoint.py  sites.py  tenants.py  webhooks.py
apps/api/app/services/: worker_client.py
apps/api/app/utils/: auth.py
apps/api/tests/: __init__.py  conftest.py  test_auth.py  test_dashboard.py  test_security.py  test_sites.py  test_tenants.py
apps/web/: README.md  next.config.js  package.json  tsconfig.json  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/auth/callback/: page.tsx
apps/web/src/app/auth/signin/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/sites/[id]/: page.tsx
apps/web/src/app/sites/new/: page.tsx
apps/web/src/components/: Button.test.tsx  Button.tsx
apps/web/src/lib/: api.ts
apps/web/src/test/: setup.ts
docs/: DASHBOARD_COMPLETE_FEATURES.md  QUICK_START_DASHBOARD.md  ROADMAP.md  TEAM_DASHBOARD_IMPLEMENTATION.md  master_spec.md
infra/db/: seed.py
tests/contracts/: package.json  requirements.txt  test_worker_contracts.py
tests/e2e/: package.json  playwright.config.ts
tests/e2e/specs/: auth.spec.ts  smoke.spec.ts
